--- a/todo.txt
+++ b/todo.txt
@@ -23,6 +23,10 @@ Project Init Procedure:
 
     grunt watch #start a watch process
 
+    npm install -g node-inspector # node js debug tool
+    npm install -g nodemon # nodejs app start tool
+
+    npm install -g bower
     ## npm
         [npm commands doc] (https://www.npmjs.org/doc/)
 
@@ -101,6 +105,8 @@ Project Init Procedure:
         [nodejs routes unit test](http://javascriptplayground.com/blog/2014/07/testing-express-routes/)
             这个方法倒是可以来用作单元测试, 总感觉缺少些原来的简洁性, 当然最好的办法就是end to end 的test
         [面向Node.js新手的7个技巧](http://dev.oupeng.com/articles/7-tips-for-a-nodejs-padawan)
+        [npm dependencies instructions](https://docs.npmjs.com/files/package.json)
+        [bower 介绍](http://blog.javachen.com/2014/05/10/bower-intro/)
 
     ## angularjs
         [angularjs api doc](http://www.ngnice.com/docs/api)
@@ -113,13 +119,18 @@ Project Init Procedure:
             http://www.cnblogs.com/whitewolf/archive/2013/04/14/3019838.html
             http://www.cnblogs.com/huang0925/archive/2013/05/30/3108370.html
 
-# Project Description
-    this is a project build with express framework 4.xx
-
-
 # develop env
     start mongo
         mongod --config /usr/local/etc/mongod.conf
+
+    nodemon
+        npm install -g nodemon
+        nodemon <your app js>
+
+    node-inspector
+        npm install -g node-inspector
+        node-debug <your app js>
+
 
 # TODOS
     DONE
@@ -140,12 +151,15 @@ Project Init Procedure:
         下订单的日志记录
         add editor config 配置
         用q.js 重构部分代码, 忽略, q 和 mongoose 一起用的时候, 在promise级联(channing)返回mongoose save的promise后得到的结果是一个数组
+        add bower, 忽略, 没必要.
+            1. 项目本身并不复杂, 不需要过多依赖
+            2. bower下载的信息过多, 没有必要
+            3. 由于当前的工作流不完善, bower下载下来的依赖需要自己添加到html中,并且会多少污染发布目录
+
         
 
     PENDING
         统一的错误拦截
         config jshint
         删除订单 http://fuhua.xiaozufan.com/Index/delorder/id/MzM3OTkwMw==?_=1421728799703
-        https://github.com/SublimeLinter/SublimeLinter-jshint
-        add bower
 
