--- a/todo.txt
+++ b/todo.txt
@@ -156,15 +156,16 @@ Project Init Procedure:
             2. bower下载的信息过多, 没有必要
             3. 由于当前的工作流不完善, bower下载下来的依赖需要自己添加到html中,并且会多少污染发布目录
         config jshint
+        添加子商家的快速跳转: 忽略, 已经改成了tab切换的模式
 
 
 
     PENDING
         统一的错误拦截
+        将爬虫程序打成jar包, 之后通过连接刷新数据
         删除订单 http://fuhua.xiaozufan.com/Index/delorder/id/MzM3OTkwMw==?_=1421728799703
         add ajax spinner
             http://www.aplusdesign.com.au/blog/jquery-ajax-loader-spinner/
 
-        添加子商家的快速跳转
         今日订单中的详情显示金钱optional, 和ip地址
-        将爬虫程序打成jar包, 之后通过连接刷新数据
+        401的时候清除用户登录信息
